--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^3.9.0",
+    "@iconify/react": "^4.1.1",
     "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-table": "^8.20.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "apexcharts": "3.41.0",
     "axios-mock-adapter": "^2.0.0",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
     "choices.js": "^10.2.0",
     "cookies-next": "^4.2.1",
@@ -59,8 +62,6 @@
     "simplebar-react": "^3.2.6",
     "swiper": "^11.1.10",
     "vite": "^5.4.1",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@iconify/react": "^4.1.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
